; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libevent/extr_event.c_event_callback_init_.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libevent/extr_event.c_event_callback_init_.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.event_base = type { i64 }
%struct.event_callback = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @event_callback_init_(%struct.event_base* %0, %struct.event_callback* %1) #0 {
  %3 = alloca %struct.event_base*, align 8
  %4 = alloca %struct.event_callback*, align 8
  store %struct.event_base* %0, %struct.event_base** %3, align 8
  store %struct.event_callback* %1, %struct.event_callback** %4, align 8
  %5 = load %struct.event_callback*, %struct.event_callback** %4, align 8
  %6 = call i32 @memset(%struct.event_callback* %5, i32 0, i32 8)
  %7 = load %struct.event_base*, %struct.event_base** %3, align 8
  %8 = getelementptr inbounds %struct.event_base, %struct.event_base* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = sub nsw i64 %9, 1
  %11 = load %struct.event_callback*, %struct.event_callback** %4, align 8
  %12 = getelementptr inbounds %struct.event_callback, %struct.event_callback* %11, i32 0, i32 0
  store i64 %10, i64* %12, align 8
  ret void
}

declare dso_local i32 @memset(%struct.event_callback*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
